<resources>
    <string name="app_name_develop">ProjectBaseDevelop</string>
    <string name="app_name_test">ProjectBaseTest</string>
    <string name="app_name_uat">ProjectBaseUat</string>
    <string name="app_name_production">ProjectBase</string>
    <string name="permission_msg_reason_firebase_analytic">We need that permissions to send analytic to our server.</string>
    <string name="permission_msg_reason_location">We need <b>location permission</b> to locate your position.</string>
    <string name="permission_msg_reject_location">We <b>can\'t</b> get your location <b>without location permission</b>.</string>
    <string name="permission_msg_reason_access_network_state">We need <b>network permission</b> to access network.</string>
    <string name="permission_msg_reject_access_network_state">We <b>can\'t</b> access network <b>without network permission</b>.</string>
    <string name="permission_msg_reason_write_external_storage">We need <b>write external storage permission</b> to write your file.</string>
    <string name="permission_msg_reject_write_external_storage">We <b>can\'t</b> write external storage <b>without permission</b>.</string>
    <string name="permission_msg_reason_read_external_storage">We need <b>read external storage permission</b> to write your file.</string>
    <string name="permission_msg_reject_read_external_storage">We <b>can\'t</b> read external storage <b>without permission</b>.</string>
    <string name="permission_msg_reason_sms">We need <b>SMS permission</b> to locate your SMS.</string>
    <string name="permission_msg_reject_sms">We <b>can\'t</b> get your SMS <b>without SMS permission</b>.</string>
    <string name="permission_msg_reason_read_external_storage_and_location">Chúng tôi cần permission read external storage and location để có thể tiếp tục.</string>
    <string name="permission_msg_reject_read_external_storage_and_location">Chúng tôi không thể lấy được tất cả permission nên không thể tiếp tục.</string>
    <string name="activity_crash_btn_back">Back to continue</string>
    <string name="activity_crash_msg_sorry_because_crashed">Sorry because crashed. Chúng tôi sẽ fix sớm nhất có thể.</string>
    <string name="appcenter_distribute_update_dialog_title">App update available</string>
    <string name="appcenter_distribute_update_dialog_message_optional">%1$s %2$s (%3$d) is available to download and install.</string>
    <string name="appcenter_distribute_update_dialog_message_mandatory">The developers of this app require you to update to %1$s %2$s (%3$d).</string>
    <string name="appcenter_distribute_update_dialog_download">Download</string>
    <string name="appcenter_distribute_update_dialog_postpone">Ask me in a day</string>
    <string name="appcenter_distribute_update_dialog_view_release_notes">View release notes</string>
    <string name="appcenter_distribute_dialog_actioned_on_disabled_toast">Distribute was disabled</string>
    <string name="appcenter_distribute_unknown_sources_dialog_message">For security, your device is set to block installation of apps obtained from unknown sources.</string>
    <string name="appcenter_distribute_unknown_sources_dialog_settings">Settings</string>
    <string name="appcenter_distribute_downloading_mandatory_update">Downloading update</string>
    <string name="appcenter_distribute_download_progress_number_format">%1$d MB of %2$d MB</string>
    <string name="appcenter_distribute_install_ready_title">App update downloaded</string>
    <string name="appcenter_distribute_install_ready_message">%1$s %2$s (%3$d) has been downloaded and is ready to be installed.</string>
    <string name="appcenter_distribute_install">Install</string>
    <string name="appcenter_distribute_notification_category">App updates</string>
    <string name="appcenter_distribute_update_failed_dialog_title">In-app updates disabled</string>
    <string name="appcenter_distribute_update_failed_dialog_ignore">Ignore</string>
    <string name="appcenter_distribute_update_failed_dialog_reinstall">Reinstall app</string>
    <string name="appcenter_distribute_update_failed_dialog_message">This release was either side-loaded or downloaded using a browser in private mode.</string>
    <string name="install_url">http...</string>
    <string name="api_url">http...</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="drawer_layout_menu_home">Home</string>
    <string name="drawer_layout_menu_permission">Permission</string>
    <string name="drawer_layout_menu_sharedpreference">SharedPreference</string>
    <string name="drawer_layout_menu_notification">Notification</string>
    <string name="drawer_layout_menu_broadcast">Broadcast</string>
    <string name="drawer_layout_menu_label_manage_application">Manage Application</string>
    <string name="drawer_layout_menu_firebase">Firebase</string>
    <string name="drawer_layout_menu_appcenter">AppCenter</string>
    <string name="drawer_layout_menu_label_toolbar">Toolbar</string>
    <string name="drawer_layout_menu_toolbar_collapsing">Toolbar Collapsing</string>
    <string name="drawer_layout_menu_toolbar_collapsing_custom_behavior">Toolbar Collapsing Custom behavior</string>
    <string name="drawer_layout_menu_label_appbar">Appbar</string>
    <string name="drawer_layout_menu_appbar_bottom">Appbar Bottom</string>
    <string name="drawer_layout_menu_label_navigation">Navigation</string>
    <string name="drawer_layout_menu_navigation_bottom">Navigation bottom</string>
    <string name="drawer_layout_menu_navigation_notification">Notification</string>
    <string name="drawer_layout_menu_snackbar">Snackbar</string>
    <string name="drawer_layout_menu_dialog">Dialog</string>
    <string name="drawer_layout_menu_label_listener">Listener</string>
    <string name="drawer_layout_menu_hand_shake">HandShake</string>
    <string name="drawer_layout_menu_network">Network</string>
    <string name="drawer_layout_menu_label_database">Database</string>
    <string name="drawer_layout_menu_realm">Realm</string>
    <string name="drawer_layout_menu_label_location">Location</string>
    <string name="drawer_layout_menu_location">Location</string>
    <string name="drawer_layout_menu_geofence">Geofence</string>
    <string name="drawer_layout_menu_detect_activity_user">Detect Activity of User</string>
    <string name="drawer_layout_menu_label_architecture_components">Architecture Components</string>
    <string name="drawer_layout_menu_dragger">Dragger</string>
    <string name="drawer_layout_menu_data_binding">Data Binding</string>
    <string name="drawer_layout_menu_butter_knife">ButterKnife</string>
    <string name="drawer_layout_menu_lifecycle">Lifecycle</string>
    <string name="drawer_layout_menu_room">Room</string>
    <string name="drawer_layout_menu_live_data">LiveData</string>
    <string name="drawer_layout_menu_view_model">ViewModel</string>
    <string name="drawer_layout_menu_paging">Paging</string>
    <string name="drawer_layout_menu_label_background_task">Background task</string>
    <string name="drawer_layout_menu_thread">Thread</string>
    <string name="drawer_layout_menu_service">Service</string>
    <string name="drawer_layout_menu_label_list_view">ListView</string>
    <string name="drawer_layout_menu_recycle_view">RecycleView</string>
    <string name="drawer_layout_menu_label_network">Network</string>
    <string name="drawer_layout_menu_retrofit">Retrofit</string>
    <string name="drawer_layout_menu_label_other">Other</string>
    <string name="drawer_layout_menu_share">Share</string>
    <string name="drawer_layout_menu_signout">SignOut</string>
    <string name="pref_key_sync_server" translatable="false">SYNC_SERVER</string>
    <string name="pref_key_title_checkbox" translatable="false">TITLE_CHECKBOX</string>
    <string name="pref_key_title_switch" translatable="false">TITLE_SWITCH</string>
    <string name="pref_key_title_edit_text" translatable="false">TITLE_EDIT_TEXT</string>
    <string name="pref_key_title_dialog" translatable="false">TITLE_DIALOG</string>
    <string name="pref_key_title_dialog_time_picker" translatable="false">TIME_PICKER</string>
    <string name="pref_key_title_list" translatable="false">TITLE_LIST_PREFERENCE</string>
    <string name="pref_key_title_multi_list" translatable="false">TITLE_MULTI_LIST_PREFERENCE</string>
    <string name="pref_key_title_dropdown" translatable="false">TITLE_DROPDOWN</string>
    <string name="pref_key_title_seekbar" translatable="false">TITLE_SEEKBAR</string>
    <string name="pref_extra_key" translatable="false">key</string>
    <string name="pref_extra_value_header_1" translatable="false">header_1</string>
    <string name="pref_extra_value_header_2" translatable="false">header_2</string>
    <string name="pref_sync_server_title">Sync Server Title</string>
    <string name="pref_sync_server_summary">Sync Server Summary</string>
    <string name="pref_title">Title</string>
    <string name="pref_title_checkbox_title">Checkbox Title</string>
    <string name="pref_title_checkbox_summary">Checkbox Summary</string>
    <string name="pref_title_switch_title">Switch Title</string>
    <string name="pref_title_switch_summary">Switch Summary</string>
    <string name="pref_title_edit_text_title">Edit Text Title</string>
    <string name="pref_title_edit_text_summary">Edit Text Summary</string>
    <string name="pref_title_preference_title">Preference Title</string>
    <string name="pref_title_preference_summary">Preference Summary</string>
    <string name="pref_title_dialog_title">Dialog Title</string>
    <string name="pref_title_dialog_summary">Dialog Summary</string>
    <string name="pref_title_dialog_time_picker_title">Time Picker Dialog Title</string>
    <string name="pref_title_list_title_dialog">List Preference Dialog Title</string>
    <string name="pref_title_multi_list_title_dialog">Multi List Preference Dialog Title</string>
    <string name="pref_title_dropdown_title">Dropdown Title</string>
    <string name="pref_title_seekbar_title">Seekbar Title</string>
    <string name="pref_subscreen_title">Subscreen Title</string>
    <string name="pref_subscreen_summary">Subscreen Summary</string>
    <string name="pref_subscreen_preference_screen_1_title">Preference Screen 1 Title</string>
    <string name="pref_subscreen_preference_screen_1_summary">Preference Screen 1 Title</string>
    <string name="pref_subscreen_ringtone_title">RingTone Title</string>
    <string name="pref_subscreen_ringtone_summary">RingTone Summary</string>
    <string name="pref_header_activity_title">Header Title</string>
    <string name="pref_header_activity_summary">Header Summary</string>
    <string name="pref_header_fragment_1_title">Header 1 Title</string>
    <string name="pref_header_fragment_1_summary">Header 1 Summary</string>
    <string name="pref_header_fragment_2_title">Header 2 Title</string>
    <string name="pref_header_fragment_2_summary">Header 2 Summary</string>
    <string name="pref_intent_title">Intent Title</string>
    <string name="pref_intent_summary">Intent Summary</string>
</resources>